sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	
var fin = false;
do
{
if(!PlusPetit(i-1,i+1))
{
	echange(i,i+1);
}
	
}
while(!fin)	
}
